<resources>
    <string name="app_language_simplified">简体中文</string>
    <string name="app_language_traditional_taiwan">繁体中文（台湾）</string>
    <string name="app_language_traditional_hong_kong">繁体中文（香港）</string>
    <string name="app_theme_system">跟随系统</string>
    <string name="app_theme_dark">开启</string>
    <string name="app_theme_light">关闭</string>
    <string name="btn_accept">接受</string>
    <string name="btn_agree">同意</string>
    <string name="btn_decline">拒绝</string>
    <string name="btn_done">完成</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_start">开始</string>
    <string name="btn_ok">确认</string>
    <string name="btn_retry">重试</string>
    <string name="btn_yes">是</string>
    <string name="btn_no">否</string>
    <string name="dialog_title_error">出错了！</string>
    <string name="dialog_title_notice">温馨提示</string>
    <string name="chat_subscriber_only">该功能仅对订阅用户开放。</string>
    <string name="btn_login">登录</string>
    <string name="btn_sign_up">注册</string>
    <string name="btn_send_email">发送邮件</string>
    <string name="mobile_phone">手机号</string>
    <string name="mobile_invalid">请填写正确的手机号码</string>
    <string name="mobile_mainland_only">仅限中国大陆地区手机号码</string>
    <string name="mobile_sms_delay_notice">短信可能需要较长时间送达。验证码15分钟内有效，请耐心等待，避免重复获取。</string>
    <string name="mobile_verification_code">验证码</string>
    <string name="mobile_request_code">获取验证码</string>
    <string name="mobile_code_counter">重新获取%1$ds</string>
    <string name="mobile_link_taken">该邮箱已经设置了其他手机号码，请关联其他邮箱，或者使用该邮箱账号登录。</string>
    <string name="mobile_login_dialog_message">这是您首次使用手机号码登录。如果您已经拥有邮箱注册的账号并且购买了FT订阅服务，建议您选择"关联邮箱账号"。\n请注意，选择"手机号新建账号"后，该手机号将无法关联您已有的邮箱账号。</string>
    <string name="mobile_login_dialog_title">手机首次登录</string>
    <string name="mobile_login_dialog_positive_buton">关联邮箱账号</string>
    <string name="mobile_login_dialog_negative_button">手机号新建账号</string>
    <string name="signup_invalid_password">密码无效</string>
    <string name="signup_email_taken">该邮箱已经注册</string>
    <string name="signup_invalid_email">邮箱地址无效</string>
    <string name="signup_mobile_taken">该手机号似乎已经注册</string>
    <string name="signup_invalid_mobile">手机号无效</string>
    <string name="login_incorrect_password">密码错误</string>
    <string name="login_email_not_found">邮箱尚未注册</string>
    <string name="link_to_signup">注册账号</string>
    <string name="link_to_login">已有账号?登录</string>
    <string name="link_forgot_password">忘记密码?</string>
    <string name="title_forgot_password">找回密码</string>
    <string name="guild_forgot_password">我们会向您的登录邮箱发送一封包含验证码的邮件，验证通过后可以重置密码</string>
    <string name="forgot_password_letter_sent">请检查您的邮件，输入邮件中的验证码，验证通过后可以重置密码。如果几分钟内没有看到邮件，请检查是否被放进了垃圾邮件列表。</string>
    <string name="forgot_password_code_not_found">您似乎使用了无效的验证码，请重新获取重置密码邮件</string>
    <string name="guild_reset_password">重置%1$s的密码</string>
    <string name="title_reset_password">重置密码</string>
    <string name="reset_password_success">密码重置成功，请登录</string>
    <string name="reset_password_failure">密码重置失败，请稍后重试</string>
    <string name="btn_verify">验证</string>
    <string name="btn_reset_password">重置密码</string>
    <string name="btn_save">保存</string>
    <string name="btn_next">下一步</string>
    <string name="btn_verify_password">验证密码</string>
    <string name="password_not_verified">密码错误</string>
    <string name="app_name">FT中文网</string>
    <string name="channel_home">首页</string>
    <string name="channel_china">中国</string>
    <string name="channel_standard_subscription">标准订阅</string>
    <string name="channel_premium_subscription">高端订阅</string>
    <string name="action_search">搜索</string>
    <string name="action_listen_story">朗读</string>
    <string name="action_favorite">收藏</string>
    <string name="share_template">[FT中文网]%1$s - %2$s</string>
    <string name="news_notification_channel_id">fcm_news_channel_high_v2</string>
    <string name="news_notification_channel_name">新闻</string>
    <string name="news_notification_channel_description">新闻动态</string>
    <string name="nav_news">最新</string>
    <string name="nav_english">每日英语</string>
    <string name="nav_ftacademy">FT商学院</string>
    <string name="nav_video">视•听</string>
    <string name="nav_myft">我的FT</string>
    <string name="news_editor_choice">编辑精选</string>
    <string name="titlebar_cn">中文</string>
    <string name="titlebar_en">英文</string>
    <string name="titlebar_bilingual">对照</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="title_about_us">关于我们</string>
    <string name="menu_audio">朗读</string>
    <string name="share_to">分享到</string>
    <string name="share_done">分享成功</string>
    <string name="alert_starred">已收藏</string>
    <string name="alert_unstarred">收藏已取消</string>
    <string name="myft_reading_history">阅读历史</string>
    <string name="myft_starred_articles">收藏文章</string>
    <string name="myft_following">关注的话题</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_not_logged_in">您尚未登录</string>
    <string name="nav_header_desc">导航栏头部</string>
    <string name="action_help">帮助</string>
    <string name="action_feedback">反馈</string>
    <string name="action_logout">退出登录</string>
    <string name="title_settings">设置</string>
    <string name="prompt_saved">保存成功!</string>
    <string name="refresh_success">更新成功!</string>
    <string name="title_login">登录FT中文网</string>
    <string name="title_wx_login">微信登录</string>
    <string name="title_email_login">邮箱登录</string>
    <string name="title_sign_up">创建FT中文网账号</string>
    <string name="title_login_signup">登录/注册</string>
    <string name="title_activity_profile">我的资料</string>
    <string name="title_change_password">修改密码</string>
    <string name="title_change_address">设置地址</string>
    <string name="title_set_mobile">关联手机号码</string>
    <string name="title_change_email">修改登录邮箱</string>
    <string name="title_change_username">修改用户名</string>
    <string name="title_wx_account">微信账号</string>
    <string name="title_unlink">解除绑定</string>
    <string name="title_account">账号与安全</string>
    <string name="formatter_wx_name">微信用户 %1$s</string>
    <string name="oauth_canceled">授权取消！</string>
    <string name="oauth_denied">授权被拒绝！</string>
    <string name="oauth_state_missing">授权码缺失！</string>
    <string name="oauth_state_mismatch">授权状态码错误！</string>
    <string name="login_expired">登录过期</string>
    <string name="wx_session_expired">微信登录已过期，请重新登录。微信登录会定期失效，如果您以后不希望看到本提示，可以重新登录后在\"我的FT - 账号与安全\"下绑定FT中文网账号。</string>
    <string name="session_expired_relogin">您的登录状态已失效，请重新登录。</string>
    <string name="account_signed_in_elsewhere">由于您的帐户已在新设备上访问，您在此设备上的会话已安全结束。您可以同时在三种不同类型的设备（手机、平板和桌面）上登录。如果这不是您的操作，请重新登录。</string>
    <string name="wx_refresh_token_expired">微信授权已过期，请重新授权后刷新账号数据。</string>
    <string name="wx_relogin">重新授权</string>
    <string name="action_wx_login">微信登录</string>
    <string name="wechat_not_found">没有找到您的微信账号信息</string>
    <string name="account_linked">已绑定</string>
    <string name="account_not_linked">尚未绑定</string>
    <string name="greeting_wx_login">你好，%1$s！欢迎登录FT中文网。</string>
    <string name="title_link_email">绑定邮箱账号</string>
    <string name="title_link_wx">绑定微信</string>
    <string name="title_merge_accounts">合并账号</string>
    <string name="instruct_sign_in">该邮箱已经注册了FT中文网账号，请输入登录密码</string>
    <string name="link_heading">您选择合并如下账号</string>
    <string name="accounts_already_linked">两个账号已经绑定，无需操作。如果您未看到绑定后的账号信息，请返回"账号与安全"后下拉刷新</string>
    <string name="ftc_account_linked">账号 %1$s 已经绑定了其他微信账号。一个FT中文网账号只能绑定一个微信账号。</string>
    <string name="wx_account_linked">微信账号 %1$s 已经绑定了其他FT中文网账号。一个FT中文网账号只能绑定一个微信账号。</string>
    <string name="accounts_member_valid">您的微信账号和FT中文网的账号均购买了会员服务，两个会员均未到期。合并账号会删除其中一个账号的会员信息。为保障您的权益，暂不支持绑定两个会员未过期的账号。您可以寻求客服帮助。</string>
    <string name="unlink_footnote">* 信用卡/借记卡、苹果内购或企业订阅信息只能保留在FT中文网账号下</string>
    <string name="prompt_linked">账号已绑定</string>
    <string name="prompt_unlinked">账号已解除绑定</string>
    <string name="unlink_guide">解除如下账号关联？</string>
    <string name="unlink_anchor">请选择解除关联后，会员信息保留在哪一方？</string>
    <string name="progress_request_verification">正在发送验证邮件&#8230;</string>
    <string name="progress_logging">正在登录&#8230;</string>
    <string name="error_email_unchanged">您已经在使用该邮箱了</string>
    <string name="error_invalid_name">用户名不能为空且不超过32 个字符</string>
    <string name="error_name_unchanged">不能与当前用户名相同</string>
    <string name="error_too_long">过长</string>
    <string name="error_too_short">过短</string>
    <string name="error_form_incomplete">表单未填写完整</string>
    <string name="password_repeat_mismatch">两次输入的新密码不一致</string>
    <string name="password_current_incorrect">当前密码错误，不能设置新密码</string>
    <string name="password_invalid_new">新密码无效</string>
    <string name="btn_link">绑定邮箱</string>
    <string name="btn_unlink">解除绑定</string>
    <string name="btn_request_verify">重新发送验证邮件</string>
    <string name="label_email">邮箱</string>
    <string name="email_not_verified">邮箱(未验证)</string>
    <string name="label_wechat">微信</string>
    <string name="default_not_set">未设置</string>
    <string name="label_current_email">当前邮箱</string>
    <string name="label_new_email">新邮箱</string>
    <string name="email_vrf_letter_sent">邮件已发送</string>
    <string name="instruct_verify_email">您的邮箱尚未验证，为保障您的账号安全，请及时验证邮箱。我们已经给您的登录邮箱发送了验证邮件，点击邮件中的链接即可。</string>
    <string name="instruct_link_email">您目前使用了微信账号登录FT中文网。为保障账号安全，建议您绑定在FT中文网注册的邮箱账号。</string>
    <string name="instruct_bind_login">邮箱 %1$s 已经注册了FT中文网账号，请输入密码验证身份，即可绑定微信账号和邮箱</string>
    <string name="instruct_sign_up">该邮箱尚未注册FT中文网账号，请设置密码创建账号</string>
    <string name="mobile_conflict">该手机号已经存在</string>
    <string name="mobile_code_not_found">验证码不存在或已过期。请使用15分钟内收到的最新验证码。</string>
    <string name="mobile_code_invalid">验证码无效</string>
    <string name="mobile_already_exists">该手机号已被使用</string>
    <string name="sms_code_sent">验证码已发送，可能需要几分钟送达。15分钟内有效，请耐心等待。</string>
    <string name="title_create_stripe_customer">开通信用卡/借记卡支付</string>
    <string name="stripe_no_payment_selected">请选择或添加支付方式</string>
    <string name="stripe_customer_not_created">开通信用卡/借记卡支付失败，请重试！</string>
    <string name="label_current_name">当前用户名</string>
    <string name="label_user_name">用户名</string>
    <string name="label_new_name">新用户名</string>
    <string name="label_password">密码</string>
    <string name="hint_enter_password">输入登录密码</string>
    <string name="hint_set_password">设置登录密码</string>
    <string name="label_old_password">当前密码</string>
    <string name="label_new_password">新密码</string>
    <string name="label_confirm_password">确认新密码</string>
    <string name="prompt_exit">再按一次退出程序</string>
    <string name="prompt_ad_timer">跳过 %1$d</string>
    <string name="login_success">登录成功</string>
    <string name="prompt_signed_up">注册成功</string>
    <string name="prompt_login_failed">登录失败，请重试</string>
    <string name="prompt_sign_up_failed">注册失败，请重试</string>
    <string name="account_not_found">没有找到您的账号</string>
    <string name="prompt_not_logged_in">您尚未登录，登录后可以查看</string>
    <string name="prompt_no_email_app">您的设备上没有安装邮件程序，无法发送反馈邮件</string>
    <string name="prompt_account_updated">账号已更新</string>
    <string name="title_delete_account">删除账号</string>
    <string name="title_confirm_delete_account">您确定要删除账号吗？</string>
    <string name="message_warn_delete_account">账号删除后不可恢复，请谨慎操作</string>
    <string name="button_delete_account">是的，我要删除</string>
    <string name="button_think_twice">再考虑一下</string>
    <string name="order_id">订单编号: %1$s</string>
    <string name="order_subscribed_plan">订阅方案: %1$s</string>
    <string name="order_price">支付金额: %1$s</string>
    <string name="order_pay_method">支付方式: %1$s</string>
    <string name="order_creation_time">创建时间: %1$s</string>
    <string name="order_period">订阅周期: %1$s ~ %2$s</string>
    <string name="label_ftc_account">邮箱账号</string>
    <string name="label_wx_account">微信账号</string>
</resources>