<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/news_inactive"
        android:title="@string/nav_news"/>
    <item
        android:id="@+id/nav_english"
        android:icon="@drawable/english_inactive"
        android:title="@string/nav_english"/>
    <item
        android:id="@+id/nav_ftacademy"
        android:icon="@drawable/fta_inactive"
        android:title="@string/nav_ftacademy"/>
    <item
        android:id="@+id/nav_video"
        android:icon="@drawable/video_inactive"
        android:title="@string/nav_video"/>
    <item
        android:id="@+id/nav_myft"
        android:icon="@drawable/myft_inactive"
        android:title="@string/nav_myft"/>
</menu>