<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    card_view:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            style="@style/OrigamiText.Body1"
            android:id="@+id/order_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:textIsSelectable="true"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/OrigamiText.Body1"
            android:id="@+id/order_subscribed_plan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_subscribed_plan"
            android:layout_marginTop="8dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/order_id_tv"/>

        <TextView
            style="@style/OrigamiText.Body1"
            android:id="@+id/tv_order_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_price"
            android:layout_marginTop="8dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/order_subscribed_plan"/>

        <TextView
            style="@style/OrigamiText.Body1"
            android:id="@+id/tv_payment_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_pay_method"
            android:layout_marginTop="8dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_order_amount"/>

        <TextView
            style="@style/OrigamiText.Body1"
            android:id="@+id/tv_creation_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_creation_time"
            android:layout_marginTop="8dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_payment_method"/>

        <TextView
            style="@style/OrigamiText.Body1"
            android:id="@+id/tv_order_period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_period"
            android:layout_marginTop="8dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_creation_time"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
