<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.account.UnlinkAnchorFragment">

    <TextView
        android:id="@+id/heading_unlink_anchor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unlink_anchor"
        android:textSize="18sp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/unlink_anchors"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:divider="@drawable/divider_teal"
        android:showDividers="middle"
        android:background="@drawable/border_rec_teal"
        app:layout_constraintTop_toBottomOf="@id/heading_unlink_anchor">

        <RadioButton
            style="@style/TabRadioButton"
            android:id="@+id/anchor_ftc_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/label_ftc_account" />

        <RadioButton
            style="@style/TabRadioButton"
            android:id="@+id/anchor_wx_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/label_wx_account" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/unlink_footnote"
        app:layout_constraintTop_toBottomOf="@id/unlink_anchors"/>

</androidx.constraintlayout.widget.ConstraintLayout>
