<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_name_tv"
        style="@style/AppTextBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_current_name"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        style="@style/AppTextBody"
        android:id="@+id/value_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_not_set"
        app:layout_constraintStart_toStartOf="@id/label_name_tv"
        app:layout_constraintEnd_toEndOf="@id/label_name_tv"
        app:layout_constraintTop_toBottomOf="@id/label_name_tv"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/label_name_tv"
        app:layout_constraintStart_toStartOf="@id/label_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/value_name_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/label_new_name"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/label_name_tv"
        app:layout_constraintStart_toStartOf="@+id/label_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/user_name_container"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
